# hexbelt

./: .gitattributes  flake.nix  treefmt.nix
.github/workflows/: deploy.yml
app/: .gitignore  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: app.css  app.html
app/src/lib/: config.ts  consts.ts  context.ts  hashtables.ts  stores.ts  utils.ts
app/src/lib/components/: ColorInput.svelte  ColorWrapper.svelte  DropOverlay.svelte  DropZone.svelte  FileDrop.svelte  FilePicker.svelte  LightSwitch.svelte  Lightswitch.svelte  SortButton.svelte  Spinner.svelte  UploadButton.svelte  VirtualRow.svelte  sidebar.svelte
app/src/lib/components/ui/accordion/: accordion-content.svelte
app/src/lib/components/ui/resizable/: resizable-handle.svelte
app/src/lib/components/ui/slider/: slider.svelte
app/src/lib/components/ui/toggle/: toggle.svelte
app/src/routes/: +layout.svelte  +page.svelte  nav.svelte
app/src/routes/bin-splash/: +page.svelte  LargeColor.svelte  SmallColor.svelte  process.ts
app/src/routes/wad/: +page.svelte  Inspector.svelte  ListItem.svelte  StaticMeshPreview.svelte  Table.svelte  TableActions.svelte  TableEntry.svelte  TexturePreview.svelte  WadEntry.svelte
rust/: Cargo.toml  modulize.mjs
rust/src/: hash_table.rs  league_file.rs  lib.rs  tex.rs  utils.rs
rust/src/mesh/: static.rs
rust/src/meta/: mod.rs  node.rs  tree.rs
rust/src/wad/: hash_table.rs  item.rs  mod.rs  tree.rs
